@@ -125,5 +125,6 @@ venv.bak/
 .idea/modules.xml
 .idea/agibase.iml
 .idea/misc.xml
+.idea/izinto-pyramid.iml
 
 mail
