@@ -25,3 +25,5 @@
 * [#111](https://github.com/upfrontsystems/izinto-angular/issues/111) add script model and api views
 * [#115](https://github.com/upfrontsystems/izinto-angular/issues/115) Add copy and paste single stat function
 * [#121](https://github.com/upfrontsystems/izinto-angular/issues/121) Rename order column to index on Dashboard
+* [#48](https://github.com/upfrontsystems/izinto-angular/issues/48) Add Year dashboard view
+
